--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "cd src/nextjs && yarn install && yarn build"
-  publish = "src/nextjs/.next"
+  command = "cd src/vanilla && yarn install && yarn build"
+  publish = "src/vanilla/dist"
 
 [template.environment]
-  LIFF_ID = "2007156229-R2AyVNlM"
+  LIFF_ID = "Your LIFF ID which is aquired from LINE Dev Center"
