--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,5 @@
   publish = "src/vanilla/dist"
 
 [template.environment]
-  LIFF_ID = "Your LIFF ID which is aquired from LINE Dev Center"
+  LIFF_ID = "2007156229-R2AyVNlM"
+  
