--- a/src/vanilla/package.json
+++ b/src/vanilla/package.json
@@ -2,8 +2,8 @@
   "name": "liff-starter-vanilla",
   "version": "0.1.0",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
-    "build": "cross-env NODE_ENV=production webpack"
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=development webpack-dev-server --progress",
+    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=production webpack"
   },
   "dependencies": {
     "@line/liff": "^2.16.0"
